Support Snowflake GCP account
All functionalities are supported except Except Spark streaming and external stage